project/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matf-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: matf
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: ws
      port: 3001
      targetPort: 3001
  type: ClusterIP
